flower shop project draft done, will do some fine tuning in the future

--- a/index.html
+++ b/index.html
@@ -7,6 +7,128 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="container navbar-bg">
+                <div class="navbar">
+                    <div class="logo">
+                        <a href="#"><img src="images/logo.png" alt=""></a>
+                    </div>
+                    <div class="menus">
+                        <ul>
+                            <li><a href="">HOME</a></li>
+                            <li><a href="">ABOUT</a></li>
+                            <li><a href="">GALLERY</a></li>
+                            <li><a href="">CONTACT</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="container header-bg">
+            <div class="banner-section-container">
+                <div class="banner-content">
+                    <div class="banner-text-container">
+                        <h1>Let's make beautiful flowers a part of your life.</h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                        <button>Shop Now</button>
+                    </div>
+                    <div class="banner-image-container">
+                        <img src="./images/banner-image.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section class="featured-image-container">
+            <div class="featured-head-container">
+                <h1>Our Featured Flowers</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="fetured-images">
+                <div class="first-image"><img src="./images/featured1.png" alt="" srcset=""></div>
+                <div class="second-image"><img src="./images/fetured2.png" alt=""></div>
+                <div class="third-image"><img src="./images/fetured3.png" alt=""></div>
+            </div>
+        </section>
+
+        <section class="support-container">
+            <div class="support-content">
+                <div class="support-first">
+                    <img src="./images/support1.png" alt="">
+                    <h3>Same Day Delivery. Click & Collect.</h3>
+                </div>
+                <div class="support-second">
+                    <img src="./images/support2.png" alt="">
+                    <h3>Fresh Flowers. Local Growers.</h3>
+                </div>
+                <div class="support-third">
+                    <img src="./images/support3.png" alt="">
+                    <h3>24/7 Free Support.</h3>
+                </div>
+            </div>
+        </section>
+
+        <div class="container hot-deal-bg">
+            <section class="hot-deal-container">
+                <div class="hot-deal-content">
+                    <div class="hot-deal-text">
+                        <h1>Hot Deal ! Sale Up To 25% <span>Off</span></h1>
+                        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <button class="sign-up-btn">Sign Up</button>
+                    </div>
+                    <div class="hot-deal-image">
+                        <img src="./images/hot-deal.png" alt="">
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <section class="instagram-image-gallery">
+            <div class="gallery-head">
+                <h1>Instagram</h1>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="gallery-images">
+                <div class="image">
+                    <img src="./images/gallery1.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="./images/gallery2.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="./images/gallery3.png" alt="">
+                </div>
+                <div class="image">
+                    <img src="./images/gallery4.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="super-deals-container">
+            <div class="deals-content">
+                <div class="deals-content-header">
+                    <h1>Get The Latest Deals</h1>
+                    <p>$30 coupon for first shopping</p>
+                </div>
+                <div class="deals-content-footer">
+                    <input type="email" name="email" placeholder="Enter your email here....">
+                    <button class="subscribe-btn">Subscribe</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="container footer-bg">
+            <div class="footer-container">
+                <div class="logo">
+                    <img src="./images/logo.png" alt="">
+                </div>
+                <p class="description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <p class="copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
